--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://youzhentsai.github.io/personal_website",
+  "homepage": "http://youzhentsai.github.io/Personal-website",
   "name": "personal_website",
   "version": "0.1.0",
   "private": true,
